--- a/First_Task.vcxproj
+++ b/First_Task.vcxproj
@@ -139,7 +139,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Date.cpp" />
+    <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="FanPage.cpp" />
     <ClCompile Include="First_Task.cpp" />
+    <ClCompile Include="MessageBoard.cpp" />
+    <ClCompile Include="Status.cpp" />
+    <ClCompile Include="User.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Date.h" />
+    <ClInclude Include="Factory.h" />
+    <ClInclude Include="FanPage.h" />
+    <ClInclude Include="MessageBoard.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Status.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
