--- a/First_Task.vcxproj
+++ b/First_Task.vcxproj
@@ -142,8 +142,9 @@
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="FanPage.cpp" />
+    <ClCompile Include="Feed.cpp" />
     <ClCompile Include="First_Task.cpp" />
-    <ClCompile Include="MessageBoard.cpp" />
+    <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Status.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
@@ -151,7 +152,8 @@
     <ClInclude Include="Date.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="FanPage.h" />
-    <ClInclude Include="MessageBoard.h" />
+    <ClInclude Include="Feed.h" />
+    <ClInclude Include="Functions.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Status.h" />
     <ClInclude Include="User.h" />
